feat: implement logout, some response helper AbortWithError to models
